--- a/notebooks/0_data_download.ipynb
+++ b/notebooks/0_data_download.ipynb
@@ -42,7 +42,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# scRNA-seq, illumina, cancer"
+    "scRNA-seq, illumina, cancer (melanoma)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "melanoma_dir = os.path.join(data_download_base, \"sc/melanoma_10x\")\n",
+    "os.makedirs(melanoma_dir, exist_ok=True)\n",
+    "\n",
+    "!cd {melanoma_dir} && !curl -O https://s3-us-west-2.amazonaws.com/10x.files/samples/cell-exp/8.0.0/10k_Human_DTC_Melanoma_3p_nextgem_Multiplex/10k_Human_DTC_Melanoma_3p_nextgem_Multiplex_fastqs.tar && tar -xvf 10k_Human_DTC_Melanoma_3p_nextgem_Multiplex_fastqs.tar"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# scRNA-seq, illumina, cancer (NSCLC)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"hello\")"
    ]
   },
   {
@@ -52,9 +80,9 @@
    "outputs": [],
    "source": [
     "# https://www.10xgenomics.com/datasets/40-k-mixture-of-nsclc-dt-cs-from-7-donors-3-ht-v-3-1-3-1-high-6-1-0\n",
-    "nsclc_dir = os.path.join(data_download_base, \"sc/nsclc_40k\")\n",
+    "nsclc_dir = os.path.join(data_download_base, \"sc/nsclc_10x_40k\")\n",
     "os.makedirs(nsclc_dir, exist_ok=True)\n",
-    "!cd {nsclc_dir} && curl -O https://s3-us-west-2.amazonaws.com/10x.files/samples/cell-exp/6.1.0/40k_NSCLC_DTC_3p_HT_nextgem_Multiplex/40k_NSCLC_DTC_3p_HT_nextgem_Multiplex_fastqs.tar"
+    "!cd {nsclc_dir} && curl -O https://s3-us-west-2.amazonaws.com/10x.files/samples/cell-exp/6.1.0/40k_NSCLC_DTC_3p_HT_nextgem_Multiplex/40k_NSCLC_DTC_3p_HT_nextgem_Multiplex_fastqs.tar && tar -xvf 40k_NSCLC_DTC_3p_HT_nextgem_Multiplex_fastqs.tar"
    ]
   },
   {
@@ -71,9 +99,9 @@
    "outputs": [],
    "source": [
     "# https://www.10xgenomics.com/datasets/10k-human-pbmcs-3-v3-1-chromium-x-without-introns-3-1-high\n",
-    "pbmc_dir = os.path.join(data_download_base, \"sc/pbmc\")\n",
+    "pbmc_dir = os.path.join(data_download_base, \"sc/pbmc_10x\")\n",
     "os.makedirs(pbmc_dir, exist_ok=True)\n",
-    "!cd {pbmc_dir} && curl -O https://s3-us-west-2.amazonaws.com/10x.files/samples/cell-exp/6.1.2/10k_PBMC_3p_nextgem_Chromium_X/10k_PBMC_3p_nextgem_Chromium_X_fastqs.tar"
+    "!cd {pbmc_dir} && curl -O https://s3-us-west-2.amazonaws.com/10x.files/samples/cell-exp/6.1.2/10k_PBMC_3p_nextgem_Chromium_X/10k_PBMC_3p_nextgem_Chromium_X_fastqs.tar && tar -xvf 10k_PBMC_3p_nextgem_Chromium_X_fastqs.tar"
    ]
   },
   {
