--- a/notebooks/1_2_variant_detection_sample_alignment.ipynb
+++ b/notebooks/1_2_variant_detection_sample_alignment.ipynb
@@ -17,7 +17,7 @@
     "import subprocess\n",
     "\n",
     "import varseek as vk\n",
-    "from varseek.utils import make_vaf_matrix, add_vcf_info_to_cosmic_tsv"
+    "from varseek.utils import make_vaf_matrix, add_vcf_info_to_cosmic_tsv, order_fastqs_correctly_for_kb_count"
    ]
   },
   {
@@ -53,7 +53,7 @@
     "run_fastqc = False\n",
     "\n",
     "# kb count\n",
-    "assay = \"bulk\"  # \"bulk\" or \"sc\"  #!!! implement\n",
+    "technology = \"bulk\"  # same options as kb count\n",
     "parity = \"single\"  # single or paired\n",
     "\n",
     "# vk clean\n",
@@ -75,10 +75,9 @@
     "out_dir_base = \"/home/jrich/data/varseek_data_fresh\"\n",
     "reference_out_dir = os.path.join(out_dir_base, \"reference\")\n",
     "out_dir_notebook = f\"{out_dir_base}/alignment_output\"\n",
-    "index_dir = os.path.join(out_dir_base, \"vk_build_pipeline_t2t\")\n",
-    "rnaseq_fastq_files = \"\"  # pass as a single string or as a list of strings (if paired-end, then pass each pair sequentially with R1 preceding R2)\n",
+    "index_dir = os.path.join(out_dir_base, \"vk_build_pipeline_t2t_nov16\")\n",
+    "rnaseq_fastq_files = \"/home/jrich/data/varseek_data/sequencing/sc/melanoma_10x/10k_Human_DTC_Melanoma_3p_nextgem_fastqs/gex\"  # pass as a single string or as a list of strings or a directory to fastq files (if paired-end, then pass each pair sequentially with R1 preceding R2) - if using directory, then it will call order_fastqs_correctly_for_kb_count - don't include index files for single-cell\n",
     "seqtk=\"seqtk\"\n",
-    "mutation_metadata_df_path = None  #!!! replace\n",
     "mutation_index = f\"{index_dir}/mutation_reference.idx\"\n",
     "t2g_vk_filter = os.path.join(index_dir, \"t2g_filtered.txt\")\n",
     "wt_mcrs_index = mutation_index = f\"{index_dir}/wt_mcrs_reference.idx\"\n",
@@ -113,12 +112,16 @@
     "\n",
     "assert k >= w + 1, \"k must be greater than or equal to w + 1\"\n",
     "\n",
-    "if type(rnaseq_fastq_files) is str:\n",
-    "    rnaseq_fastq_files = [rnaseq_fastq_files]\n",
+    "if isinstance(rnaseq_fastq_files, str):\n",
+    "    if os.isdir(rnaseq_fastq_files):  # is a directory\n",
+    "        rnaseq_fastq_files = order_fastqs_correctly_for_kb_count(rnaseq_fastq_files, keep_index_files=keep_index_files)\n",
+    "    else:  # is a space-separated string\n",
+    "        rnaseq_fastq_files = [rnaseq_fastq_files]\n",
     "\n",
     "adata_path = f\"{kb_count_out}/counts_unfiltered/adata.h5ad\"\n",
     "adata_path_wt_mcrs = f\"{kb_count_out_wt_mcrs}/counts_unfiltered/adata.h5ad\"\n",
-    "adata_path_normal_genome = f\"{kb_count_out_standard_index}/counts_unfiltered/adata.h5ad\""
+    "adata_path_normal_genome = f\"{kb_count_out_standard_index}/counts_unfiltered/adata.h5ad\"\n",
+    "mutation_metadata_df_path = os.path.join(index_dir, \"mutation_metadata_df_filtered.csv\")"
    ]
   },
   {
@@ -127,7 +130,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rnaseq_fastq_files_final = vk.fastqpp(\n",
+    "rnaseq_fastq_files_list_dict = vk.fastqpp(\n",
     "    rnaseq_fastq_files_list=rnaseq_fastq_files, \n",
     "    trim_edges_off_reads = trim_edges_off_reads, \n",
     "    run_fastqc = run_fastqc, \n",
@@ -146,23 +149,8 @@
     "    delete_intermediate_files = False\n",
     ")\n",
     "\n",
-    "# if trim_edges_off_reads:\n",
-    "#     rnaseq_fastq_files_quality_controlled = trim_edges_off_reads_fastq_list(rnaseq_fastq_files=rnaseq_fastq_files, parity=parity, minimum_base_quality_trim_reads=minimum_base_quality_trim_reads, qualified_quality_phred=qualified_quality_phred, unqualified_percent_limit=unqualified_percent_limit, n_base_limit=n_base_limit, length_required=length_required)\n",
-    "# else:\n",
-    "#     rnaseq_fastq_files_quality_controlled = rnaseq_fastq_files\n",
-    "\n",
-    "# if run_fastqc:\n",
-    "#     run_fastqc_and_multiqc(rnaseq_fastq_files_quality_controlled, fastqc_out_dir)\n",
-    "\n",
-    "# if replace_low_quality_bases_with_N:\n",
-    "#     rnaseq_fastq_files_replace_low_quality_bases_with_N = replace_low_quality_bases_with_N_list(rnaseq_fastq_files_quality_controlled=rnaseq_fastq_files_quality_controlled, minimum_base_quality_replace_with_N=minimum_base_quality_replace_with_N, seqtk=seqtk)\n",
-    "# else:\n",
-    "#     rnaseq_fastq_files_replace_low_quality_bases_with_N = rnaseq_fastq_files_quality_controlled\n",
-    "\n",
-    "# if split_reads_by_Ns:\n",
-    "#     rnaseq_fastq_files_final = split_reads_by_N_list(rnaseq_fastq_files_replace_low_quality_bases_with_N, minimum_sequence_length=k)\n",
-    "# else:\n",
-    "#     rnaseq_fastq_files_final = rnaseq_fastq_files_replace_low_quality_bases_with_N"
+    "rnaseq_fastq_files_quality_controlled = rnaseq_fastq_files_list_dict[\"quality_controlled\"]\n",
+    "rnaseq_fastq_files_final = rnaseq_fastq_files_list_dict[\"final\"]"
    ]
   },
   {
@@ -178,9 +166,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: incorporate assay bulk vs sc in here\n",
     "if not os.path.exists(kb_count_out) or len(os.listdir(kb_count_out)) == 0:\n",
-    "    kb_count_command = [\"kb\", \"count\", \"-t\", str(threads), \"-k\", str(k), \"-i\", mutation_index, \"-g\", t2g_vk_filter, \"-x\", \"bulk\", \"--num\", \"--h5ad\", \"--parity\", \"single\", \"--strand\", strand, \"-o\", kb_count_out] + rnaseq_fastq_files_final\n",
+    "    kb_count_command = [\"kb\", \"count\", \"-t\", str(threads), \"-k\", str(k), \"-i\", mutation_index, \"-g\", t2g_vk_filter, \"-x\", technology, \"--num\", \"--h5ad\", \"--parity\", \"single\", \"--strand\", strand, \"-o\", kb_count_out] + rnaseq_fastq_files_final\n",
     "    subprocess.run(kb_count_command, check=True)"
    ]
   },
@@ -197,9 +184,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: incorporate assay bulk vs sc in here\n",
     "if os.path.exists(wt_mcrs_index) and (not os.path.exists(kb_count_out_wt_mcrs) or len(os.listdir(kb_count_out_wt_mcrs)) == 0):\n",
-    "    kb_count_command = [\"kb\", \"count\", \"-t\", str(threads), \"-k\", str(k), \"-i\", wt_mcrs_index, \"-g\", wt_mcrs_t2g, \"-x\", \"bulk\", \"--num\", \"--h5ad\", \"--parity\", \"single\", \"--strand\", strand, \"-o\", kb_count_out_wt_mcrs] + rnaseq_fastq_files_final\n",
+    "    kb_count_command = [\"kb\", \"count\", \"-t\", str(threads), \"-k\", str(k), \"-i\", wt_mcrs_index, \"-g\", wt_mcrs_t2g, \"-x\", technology, \"--num\", \"--h5ad\", \"--parity\", \"single\", \"--strand\", strand, \"-o\", kb_count_out_wt_mcrs] + rnaseq_fastq_files_final\n",
     "    subprocess.run(kb_count_command, check=True)"
    ]
   },
@@ -223,7 +209,7 @@
     "        kb_ref_command = [\"kb\", \"ref\", \"-t\", str(threads), \"-k\", str(k_standard), \"-i\", standard_index, \"-g\", standard_t2g, standard_genome, standard_gtf]\n",
     "    subprocess.run(kb_ref_command, check=True)\n",
     "\n",
-    "# TODO: incorporate assay bulk vs sc in here\n",
+    "# TODO: incorporate technology bulk vs sc in here\n",
     "if not os.path.exists(kb_count_out_standard_index) or len(os.listdir(kb_count_out_standard_index)) == 0:\n",
     "    kb_count_standard_index_command = [\"kb\", \"count\", \"-t\", str(threads), \"-k\", str(k_standard), \"-i\", standard_index, \"-g\", standard_t2g, \"-x\", \"bulk\", \"--h5ad\", \"--parity\", parity, \"--strand\", strand, \"-o\", kb_count_out_standard_index] + rnaseq_fastq_files_quality_controlled\n",
     "    subprocess.run(kb_count_standard_index_command, check=True)"
@@ -261,6 +247,8 @@
     "reference_genome_fasta = \"\"  # grch37, ensembl93\n",
     "cosmic_cdna_info_csv = \"\"\n",
     "id_to_header_csv = \"\"\n",
+    "\n",
+    "# I need a metadata df with ID (corresponding to mcrs_header), CHROM, POS, REF, ALT\n",
     "cosmic_df = add_vcf_info_to_cosmic_tsv(cosmic_tsv=cosmic_tsv, reference_genome_fasta=reference_genome_fasta, cosmic_df_out = None, cosmic_cdna_info_csv = cosmic_cdna_info_csv, mutation_source = \"cdna\")\n",
     "# cosmic_df = cosmic_df.rename(columns=lambda x: f\"{x}_vcf\")\n",
     "\n",
@@ -340,7 +328,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "vk.summarize(adata_path_clean, assay = assay, output_dir = vk_summarize_output_dir, overwrite = False, top_values = 10)"
+    "vk.summarize(adata_path_clean, technology = technology, output_dir = vk_summarize_output_dir, overwrite = False, top_values = 10)"
    ]
   }
  ],
