--- a/notebooks/2_variant_simulation.ipynb
+++ b/notebooks/2_variant_simulation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,31 +251,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/jrich/Desktop/varseek/varseek/varseek_sim.py:115: DtypeWarning: Columns (11,12,13,26,27,31,68,70) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  mutation_metadata_df = pd.read_csv(mutation_metadata_df)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "cannot find mutant sequence read parent\n",
-      "running varseek build\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/jrich/Desktop/varseek/varseek/varseek_build.py:654: DtypeWarning: Columns (11,12,13,26,27,31,68,70) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  mutations = pd.read_csv(mutations)\n"
+      "/tmp/ipykernel_318327/3467447099.py:56: DtypeWarning: Columns (11,12,13,26,27,31,68,70) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  mutation_metadata_df = pd.read_csv(mutation_metadata_df_out)\n"
      ]
     }
    ],
@@ -359,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,9 +352,9 @@
     "# TODO: incorporate build_random_genome_read_df as a part of vk sim\n",
     "if read_df_did_not_exist:\n",
     "    if number_of_random_reads_cdna > 0:\n",
-    "        read_df = build_random_genome_read_df(reference_fasta_file_path = sequences, mutation_metadata_df = mutation_metadata_df, read_df = read_df, read_df_out=read_df_out, fastq_output_path = random_reads_fastq_cdna, fastq_parent_path = synthetic_reads_fastQ, n = number_of_random_reads_cdna, read_length = read_length, input_type = \"transcriptome\", strand = strand, add_noise=add_noise)\n",
+    "        read_df = build_random_genome_read_df(reference_fasta_file_path = sequences, mutation_metadata_df = mutation_metadata_df, read_df = read_df, read_df_out=read_df_out, fastq_output_path = random_reads_fastq_cdna, fastq_parent_path = synthetic_reads_fastQ, n = number_of_random_reads_cdna, read_length = read_length, input_type = \"transcriptome\", strand = strand, add_noise=add_noise, seed=seed)\n",
     "    if number_of_random_reads_genome > 0:\n",
-    "        read_df = build_random_genome_read_df(reference_fasta_file_path = reference_genome_fasta, mutation_metadata_df = mutation_metadata_df, read_df = read_df, read_df_out=read_df_out, fastq_output_path = random_reads_fastq_genome, fastq_parent_path = synthetic_reads_fastQ, n = number_of_random_reads_genome, read_length = read_length, input_type = \"genome\", strand = strand, add_noise=add_noise)"
+    "        read_df = build_random_genome_read_df(reference_fasta_file_path = reference_genome_fasta, mutation_metadata_df = mutation_metadata_df, read_df = read_df, read_df_out=read_df_out, fastq_output_path = random_reads_fastq_genome, fastq_parent_path = synthetic_reads_fastQ, n = number_of_random_reads_genome, read_length = read_length, input_type = \"genome\", strand = strand, add_noise=add_noise, seed=seed)"
    ]
   },
   {
@@ -961,8 +945,10 @@
     "metric_dictionary_reads_crude = calculate_metrics(read_df, header_name = \"read_header\", check_assertions = check_assertions, crude = True, out = f\"{plot_output_folder}/reads_metrics_crude.txt\")\n",
     "draw_confusion_matrix(metric_dictionary_reads_crude)\n",
     "\n",
-    "true_set_crude = set(read_df.loc[read_df['mutant_read'], 'read_header'])\n",
-    "positive_set_crude = set(read_df.loc[read_df['aligned_somewhere'], 'read_header'])\n",
+    "read_df['read_id_unique'] = read_df['read_id'] + \"_\" + read_df.index.astype(str)  # because, if I sample with replacement, some read_id's (and their matching read_header's) will be repeated\n",
+    "\n",
+    "true_set_crude = set(read_df.loc[read_df['mutant_read'], 'read_id_unique'])\n",
+    "positive_set_crude = set(read_df.loc[read_df['aligned_somewhere'], 'read_id_unique'])\n",
     "# don't show mm here, because mm is counted as a TP for crude\n",
     "create_venn_diagram(true_set_crude, positive_set_crude, TN = metric_dictionary_reads_crude['TN'], mm = None, out_path = f\"{plot_output_folder}/venn_diagram_read_crude.png\")\n",
     "\n",
@@ -975,20 +961,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "bus_df_unique = bus_df[['read_id', 'transcript_ids_list']].drop_duplicates()\n",
+    "merged_df = read_df.merge(bus_df_unique, on='read_id', how='left')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from varseek.utils import safe_literal_eval\n",
+    "\n",
     "# Merge read_df with bus_df on 'read_id' and 'fastq_header' to bring in 'transcript_ids_list'\n",
-    "merged_df = read_df.merge(bus_df[['read_id', 'transcript_ids_list']], \n",
+    "read_df = read_df.merge(bus_df[['read_id', 'transcript_ids_list', 'transcript_names_final']].drop_duplicates(), \n",
     "                          on='read_id', \n",
-    "                          how='left')\n",
+    "                          how='left').rename(columns={'transcript_names_final': 'mcrs_id_to_which_the_read_aligned'})\n",
+    "\n",
+    "read_df[\"transcript_ids_list\"] = read_df[\"transcript_ids_list\"].apply(safe_literal_eval)\n",
     "\n",
     "# Create 'multimapped' column as True if length of 'transcript_ids_list' > 1, else False\n",
-    "read_df['multimapped'] = merged_df['transcript_ids_list'].apply(lambda x: len(x) > 1 if isinstance(x, list) else False)\n",
+    "read_df['multimapped'] = read_df['transcript_ids_list'].apply(lambda x: len(x) > 1 if isinstance(x, list) else False)\n",
     "\n",
+    "read_df.drop(columns=['transcript_ids_list'], inplace=True)\n",
     "\n",
-    "read_df = read_df.merge(bus_df[['read_id', 'transcript_names_final']], \n",
-    "                        on='read_id', \n",
-    "                        how='left').rename(columns={'transcript_names_final': 'mcrs_id_to_which_the_read_aligned'})\n",
-    "\n",
-    "from varseek.utils import safe_literal_eval\n",
     "read_df[\"mcrs_id_to_which_the_read_aligned\"] = read_df[\"mcrs_id_to_which_the_read_aligned\"].apply(safe_literal_eval)\n",
     "\n",
     "# Convert lists to comma-separated strings, keeping NaN values as NaN\n",
@@ -1064,8 +1060,8 @@
     "metric_dictionary_reads = calculate_metrics(read_df, header_name = \"read_header\", check_assertions = check_assertions, out = f\"{plot_output_folder}/read_metrics.txt\")\n",
     "draw_confusion_matrix(metric_dictionary_reads)\n",
     "\n",
-    "true_set = set(read_df.loc[read_df['mutant_read'], 'read_header'])\n",
-    "positive_set = set(read_df.loc[read_df['aligned_to_correct_mcrs'], 'read_header'])\n",
+    "true_set = set(read_df.loc[read_df['mutant_read'], 'read_id_unique'])\n",
+    "positive_set = set(read_df.loc[read_df['aligned_to_correct_mcrs'], 'read_id_unique'])\n",
     "create_venn_diagram(true_set, positive_set, TN = metric_dictionary_reads['TN'], mm = n_multimapped, out_path = f\"{plot_output_folder}/venn_diagram_read.png\")"
    ]
   },
