unique read naming added to vk sim; and the testing notebook 2 for unique naming is kept

--- a/notebooks/2_variant_simulation.ipynb
+++ b/notebooks/2_variant_simulation.ipynb
@@ -942,10 +942,10 @@
     "read_df['FN_crude'] = (read_df['mutant_read'] & ~read_df['aligned_somewhere'])\n",
     "read_df['TN_crude'] = (~read_df['mutant_read'] & ~read_df['aligned_somewhere'])\n",
     "\n",
-    "metric_dictionary_reads_crude = calculate_metrics(read_df, header_name = \"read_header\", check_assertions = check_assertions, crude = True, out = f\"{plot_output_folder}/reads_metrics_crude.txt\")\n",
-    "draw_confusion_matrix(metric_dictionary_reads_crude)\n",
-    "\n",
     "read_df['read_id_unique'] = read_df['read_id'] + \"_\" + read_df.index.astype(str)  # because, if I sample with replacement, some read_id's (and their matching read_header's) will be repeated\n",
+    "\n",
+    "metric_dictionary_reads_crude = calculate_metrics(read_df, header_name = \"read_id_unique\", check_assertions = check_assertions, crude = True, out = f\"{plot_output_folder}/reads_metrics_crude.txt\")\n",
+    "draw_confusion_matrix(metric_dictionary_reads_crude)\n",
     "\n",
     "true_set_crude = set(read_df.loc[read_df['mutant_read'], 'read_id_unique'])\n",
     "positive_set_crude = set(read_df.loc[read_df['aligned_somewhere'], 'read_id_unique'])\n",
@@ -1057,7 +1057,7 @@
     "read_df['FN'] = (read_df['mutant_read'] & ~read_df['aligned_to_correct_mcrs'])\n",
     "read_df['TN'] = (~read_df['mutant_read'] & ~read_df['aligned_to_correct_mcrs'])\n",
     "\n",
-    "metric_dictionary_reads = calculate_metrics(read_df, header_name = \"read_header\", check_assertions = check_assertions, out = f\"{plot_output_folder}/read_metrics.txt\")\n",
+    "metric_dictionary_reads = calculate_metrics(read_df, header_name = \"read_id_unique\", check_assertions = check_assertions, out = f\"{plot_output_folder}/read_metrics.txt\")\n",
     "draw_confusion_matrix(metric_dictionary_reads)\n",
     "\n",
     "true_set = set(read_df.loc[read_df['mutant_read'], 'read_id_unique'])\n",
