about to have single output dir for all functions, and will soon implement vk ref and count

--- a/notebooks/1_2_variant_detection_sample_alignment.ipynb
+++ b/notebooks/1_2_variant_detection_sample_alignment.ipynb
@@ -77,6 +77,7 @@
     "out_dir_notebook = f\"{out_dir_base}/alignment_output\"\n",
     "index_dir = os.path.join(out_dir_base, \"vk_build_pipeline_t2t_nov16\")\n",
     "rnaseq_fastq_files = \"/home/jrich/data/varseek_data/sequencing/sc/melanoma_10x/10k_Human_DTC_Melanoma_3p_nextgem_fastqs/gex\"  # pass as a single string or as a list of strings or a directory to fastq files (if paired-end, then pass each pair sequentially with R1 preceding R2) - if using directory, then it will call order_fastqs_correctly_for_kb_count - don't include index files for single-cell\n",
+    "multiplexed = False  # True if fastq files are multiplexed\n",
     "seqtk=\"seqtk\"\n",
     "mutation_index = f\"{index_dir}/mutation_reference.idx\"\n",
     "t2g_vk_filter = os.path.join(index_dir, \"t2g_filtered.txt\")\n",
@@ -114,7 +115,7 @@
     "\n",
     "if isinstance(rnaseq_fastq_files, str):\n",
     "    if os.isdir(rnaseq_fastq_files):  # is a directory\n",
-    "        rnaseq_fastq_files = order_fastqs_correctly_for_kb_count(rnaseq_fastq_files, keep_index_files=keep_index_files)\n",
+    "        rnaseq_fastq_files = order_fastqs_correctly_for_kb_count(rnaseq_fastq_files, technology=technology, multiplexed=multiplexed)\n",
     "    else:  # is a space-separated string\n",
     "        rnaseq_fastq_files = [rnaseq_fastq_files]\n",
     "\n",
@@ -137,6 +138,7 @@
     "    replace_low_quality_bases_with_N = replace_low_quality_bases_with_N, \n",
     "    split_reads_by_Ns = split_reads_by_Ns, \n",
     "    parity = parity, \n",
+    "    technology=technology,\n",
     "    fastqc_out_dir = fastqc_out_dir,\n",
     "    minimum_base_quality_trim_reads = minimum_base_quality_trim_reads,\n",
     "    qualified_quality_phred = qualified_quality_phred,\n",
