--- a/notebooks/2_variant_simulation.ipynb
+++ b/notebooks/2_variant_simulation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "out_dir_notebook=\"/home/jrich/data/varseek_data_fresh/vk_sim_2024dec9_complex_testing\" #!!! change for each run\n",
+    "out_dir_notebook=\"/home/jrich/data/varseek_data_fresh/vk_sim_2024dec17_complex_testing\" #!!! change for each run\n",
     "number_of_mutations_to_sample = 350\n",
     "# Paths\n",
     "mutation_metadata_df = \"/home/jrich/data/varseek_data_fresh/vk_build_pipeline_grch37_nov16/mutation_metadata_df_updated_vk_info_exploded_filtered.csv\"\n",
@@ -35,14 +35,16 @@
     "\n",
     "read_length = 150\n",
     "strand = None  # None for strand-agnostic (randomly-selected), \"f\" for forward, \"r\" for reverse, \"both\" for both - make sure this matches the reference genome (vk build command) - strand = True -> \"f\" or \"r\" here; strand = False -> None or \"both\" here - note that the strand is randomly selected per *transcript*, such that all drawn reads will come from the same strand no matter what\n",
-    "add_noise=True\n",
-    "error_rate=0.0001  # only if add_noise=True\n",
-    "error_distribution=(0.85, 0.1, 0.05)  # sub, del, ins  # only if add_noise=True\n",
-    "max_errors=float(\"inf\")  # only if add_noise=True\n",
+    "add_noise_sequencing_error=True\n",
+    "add_noise_base_quality=False\n",
+    "error_rate=0.0001  # only if add_noise_sequencing_error=True\n",
+    "error_distribution=(0.85, 0.1, 0.05)  # sub, del, ins  # only if add_noise_sequencing_error=True\n",
+    "max_errors=float(\"inf\")  # only if add_noise_sequencing_error=True\n",
     "seq_id_column=\"seq_ID\"\n",
     "mut_column=\"mutation\"\n",
     "threads = 32\n",
     "check_reason_for_read_fn = False\n",
+    "seed=42\n",
     "\n",
     "number_of_random_reads_cdna = 10000\n",
     "number_of_random_reads_genome = 0\n",
@@ -74,8 +76,6 @@
     "kb_count_out = f\"{out_dir_notebook}/kb_count_out\"\n",
     "kb_count_out_mm = f\"{out_dir_notebook}/kb_count_out_mm\"\n",
     "\n",
-    "\n",
-    "seed=42\n",
     "read_df = None\n",
     "mutation_metadata_df_path = mutation_metadata_df\n",
     "adata_path = f\"{kb_count_out}/counts_unfiltered/adata.h5ad\"\n",
@@ -86,7 +86,11 @@
     "plot_output_folder = f\"{out_dir_notebook}/plots\"\n",
     "os.makedirs(plot_output_folder, exist_ok=True)\n",
     "\n",
-    "read_df_did_not_exist = False"
+    "read_df_did_not_exist = False\n",
+    "\n",
+    "if seed:\n",
+    "    random.seed(seed)\n",
+    "    np.random.seed(seed)"
    ]
   },
   {
@@ -195,7 +199,7 @@
     "#         k=k,  # used in vk build with the respective index\n",
     "#         w=w,  # used in vk build with the respective index\n",
     "#         read_length=read_length,\n",
-    "#         seed=seed,\n",
+    "#         seed=None,\n",
     "#         add_noise=add_noise,\n",
     "#         error_rate=error_rate,\n",
     "#         error_distribution=error_distribution,\n",
@@ -240,10 +244,10 @@
    ],
    "source": [
     "# total = 0\n",
-    "# for m in m_list:\n",
-    "#     total += m * len(w_list) * len(conditions) * number_of_mutations_to_sample\n",
-    "# for w in w_list:\n",
-    "#     total += w * len(m_list) * len(conditions) * number_of_mutations_to_sample\n",
+    "# for mutant_depth in m_list:\n",
+    "#     total += mutant_depth * len(w_list) * len(conditions) * number_of_mutations_to_sample\n",
+    "# for wt_depth in w_list:\n",
+    "#     total += wt_depth * len(m_list) * len(conditions) * number_of_mutations_to_sample\n",
     "# total += number_of_random_reads_cdna + number_of_random_reads_genome\n",
     "# total_lines = total * 4\n",
     "# print(total_lines)"
@@ -279,10 +283,10 @@
     "\n",
     "if not os.path.exists(mutation_metadata_df_out) and not os.path.exists(read_df_out):\n",
     "    read_df_did_not_exist = True\n",
-    "    for m in m_list:\n",
-    "        for w in w_list:\n",
+    "    for mutant_sequencing_depth in m_list:\n",
+    "        for wt_sequencing_depth in w_list:\n",
     "            for condition in conditions:\n",
-    "                read_fq_path_specific = f\"{specific_fastq_selection}/synthetic_reads_m{m}_w{w}_{condition.replace('=', '_')}.fq\"\n",
+    "                read_fq_path_specific = f\"{specific_fastq_selection}/synthetic_reads_m{mutant_sequencing_depth}_w{wt_sequencing_depth}_{condition.replace('=', '_')}.fq\"\n",
     "                condition_added_list = [condition, 'included_in_synthetic_reads-isnottrue']\n",
     "                \n",
     "                simulated_df_dict = vk.sim(\n",
@@ -296,11 +300,12 @@
     "                    k=k,\n",
     "                    w=w,\n",
     "                    number_of_reads_per_sample=None,  # not used when number_of_reads_per_sample_m and number_of_reads_per_sample_w are provided\n",
-    "                    number_of_reads_per_sample_m=m,\n",
-    "                    number_of_reads_per_sample_w=w,\n",
+    "                    number_of_reads_per_sample_m=mutant_sequencing_depth,\n",
+    "                    number_of_reads_per_sample_w=wt_sequencing_depth,\n",
     "                    read_length=read_length,\n",
-    "                    seed=seed,\n",
-    "                    add_noise=add_noise,\n",
+    "                    seed=None,  # no need to pass in since it's set globally\n",
+    "                    add_noise_sequencing_error=add_noise_sequencing_error,\n",
+    "                    add_noise_base_quality=add_noise_base_quality,\n",
     "                    error_rate=error_rate,\n",
     "                    error_distribution=error_distribution,\n",
     "                    max_errors=max_errors,\n",
@@ -331,18 +336,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import importlib\n",
-    "import varseek.utils.seq_utils\n",
-    "importlib.reload(varseek.utils.seq_utils)\n",
-    "from varseek.utils.seq_utils import build_random_genome_read_df"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -352,9 +345,9 @@
     "# TODO: incorporate build_random_genome_read_df as a part of vk sim\n",
     "if read_df_did_not_exist:\n",
     "    if number_of_random_reads_cdna > 0:\n",
-    "        read_df = build_random_genome_read_df(reference_fasta_file_path = sequences, mutation_metadata_df = mutation_metadata_df, read_df = read_df, read_df_out=read_df_out, fastq_output_path = random_reads_fastq_cdna, fastq_parent_path = synthetic_reads_fastQ, n = number_of_random_reads_cdna, read_length = read_length, input_type = \"transcriptome\", strand = strand, add_noise=add_noise, seed=seed)\n",
+    "        read_df = build_random_genome_read_df(reference_fasta_file_path = sequences, mutation_metadata_df = mutation_metadata_df, read_df = read_df, read_df_out=read_df_out, fastq_output_path = random_reads_fastq_cdna, fastq_parent_path = synthetic_reads_fastQ, n = number_of_random_reads_cdna, read_length = read_length, input_type = \"transcriptome\", strand = strand, add_noise_sequencing_error=add_noise_sequencing_error, add_noise_base_quality=add_noise_base_quality, seed=None)  # no need to pass in since it's set globally\n",
     "    if number_of_random_reads_genome > 0:\n",
-    "        read_df = build_random_genome_read_df(reference_fasta_file_path = reference_genome_fasta, mutation_metadata_df = mutation_metadata_df, read_df = read_df, read_df_out=read_df_out, fastq_output_path = random_reads_fastq_genome, fastq_parent_path = synthetic_reads_fastQ, n = number_of_random_reads_genome, read_length = read_length, input_type = \"genome\", strand = strand, add_noise=add_noise, seed=seed)"
+    "        read_df = build_random_genome_read_df(reference_fasta_file_path = reference_genome_fasta, mutation_metadata_df = mutation_metadata_df, read_df = read_df, read_df_out=read_df_out, fastq_output_path = random_reads_fastq_genome, fastq_parent_path = synthetic_reads_fastQ, n = number_of_random_reads_genome, read_length = read_length, input_type = \"genome\", strand = strand, add_noise_sequencing_error=add_noise_sequencing_error, add_noise_base_quality=add_noise_base_quality, seed=None)"
    ]
   },
   {
@@ -953,16 +946,6 @@
     "create_venn_diagram(true_set_crude, positive_set_crude, TN = metric_dictionary_reads_crude['TN'], mm = None, out_path = f\"{plot_output_folder}/venn_diagram_read_crude.png\")\n",
     "\n",
     "create_stratified_metric_bar_plot(read_df, 'mcrs_mutation_type', 'accuracy', overall_metric = metric_dictionary_reads_crude['accuracy'], log_x_axis = False, display_numbers = True, crude = True, out_path = f\"{plot_output_folder}/accuracy_vs_mcrs_mutation_type_read_perspective_crude.png\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bus_df_unique = bus_df[['read_id', 'transcript_ids_list']].drop_duplicates()\n",
-    "merged_df = read_df.merge(bus_df_unique, on='read_id', how='left')"
    ]
   },
   {
