in the process of changing varseek function parameter names

--- a/notebooks/2_variant_simulation.ipynb
+++ b/notebooks/2_variant_simulation.ipynb
@@ -72,6 +72,7 @@
     "random_reads_fastq_genome = f\"{specific_fastq_selection}/random_reads_genome.fq\"\n",
     "read_df_out = f\"{out_dir_notebook}/synthetic_reads.csv\"\n",
     "mutation_metadata_df_out = f\"{out_dir_notebook}/mutation_metadata_df_updated_vk_info_exploded_with_synthetic_read_info.csv\"\n",
+    "# config_file_out = f\"{out_dir_notebook}/vk_sim_config.json\"\n",
     "\n",
     "kb_count_out = f\"{out_dir_notebook}/kb_count_out\"\n",
     "kb_count_out_mm = f\"{out_dir_notebook}/kb_count_out_mm\"\n",
