in the process of renaming varseek parameters

--- a/notebooks/1_1_variant_detection_reference_building.ipynb
+++ b/notebooks/1_1_variant_detection_reference_building.ipynb
@@ -53,15 +53,14 @@
     "save_exploded_df=True\n",
     "\n",
     "# vk filter\n",
-    "minimum_triplet_complexity_percent = 0.001  # filter out bottom 0.1% of MCRSs by triplet complexity\n",
     "fasta_filters = [\n",
     "    \"dlist_substring-equal=none\",  # filter out mutations which are a substring of the reference genome\n",
     "    \"pseudoaligned_to_human_reference_despite_not_truly_aligning-isnottrue\",  # filter out mutations which pseudoaligned to human genome despite not truly aligning\n",
     "    \"dlist-equal=none\",  #*** erase eventually when I want to d-list  # filter out mutations which are capable of being d-listed (given that I filter out the substrings above)\n",
     "    \"number_of_kmers_with_overlap_to_other_mcrs_items_in_mcrs_reference-max=999999\",  # filter out mutations which overlap with other MCRSs in the reference\n",
     "    \"number_of_mcrs_items_with_overlapping_kmers_in_mcrs_reference-max=999999\",  # filter out mutations which overlap with other MCRSs in the reference\n",
-    "    \"longest_homopolymer_length-bottompercent=99.99\",  # filters out MCRSs with repeating single nucleotide - 99.99 keeps the bottom 99.99%ile (fraction 0.9999)\n",
-    "    \"triplet_complexity-toppercent=99.9\"  # filters out MCRSs with repeating triplets - 99.9 keeps the top 99.9%ile (fraction 0.999)\n",
+    "    \"longest_homopolymer_length-bottompercent=99.99\",  # filters out MCRSs with repeating single nucleotide - 99.99 keeps the bottom 99.99% (fraction 0.9999) ie filters out the top 0.01%\n",
+    "    \"triplet_complexity-toppercent=99.9\"  # filters out MCRSs with repeating triplets - 99.9 keeps the top 99.9% (fraction 0.999) ie filters out the bottom 0.1%\n",
     "]\n",
     "\n",
     "# kb ref\n",
@@ -114,8 +113,6 @@
     "else:\n",
     "    max_ambiguous_vk = None\n",
     "\n",
-    "merge_identical_rc = not strandedness\n",
-    "\n",
     "vk_build_mcrs_fa_path = os.path.join(out_dir_notebook, \"mcrs.fa\")\n",
     "update_df_out = os.path.join(out_dir_notebook, \"mutation_metadata_df.csv\")\n",
     "os.makedirs(out_dir_notebook, exist_ok=True)\n",
@@ -163,7 +160,7 @@
     "    sequences=sequences,\n",
     "    mutations=mutations,\n",
     "    out=out_dir_notebook,\n",
-    "    reference_out=reference_out_dir,\n",
+    "    reference_out_dir=reference_out_dir,\n",
     "    w=w,\n",
     "    k=k,\n",
     "    required_insertion_overlap_length=required_insertion_overlap_length,\n",
@@ -172,13 +169,12 @@
     "    min_seq_len=min_seq_len,\n",
     "    max_ambiguous=max_ambiguous_vk,\n",
     "    merge_identical=True,\n",
-    "    merge_identical_rc=merge_identical_rc,\n",
+    "    strandedness=strandedness,\n",
     "    cosmic_email = os.getenv('COSMIC_EMAIL'),\n",
     "    cosmic_password = os.getenv('COSMIC_PASSWORD'),\n",
-    "    create_t2g=True,\n",
-    "    create_wt_mcrs_counterpart_fa=True,\n",
-    "    update_df=True,\n",
-    "    update_df_out=update_df_out,\n",
+    "    save_wt_mcrs_fasta_and_t2g=False,\n",
+    "    save_mutations_updated_csv=True,\n",
+    "    mutations_updated_csv_out=update_df_out,\n",
     "    verbose=verbose,\n",
     ")"
    ]
@@ -272,7 +268,6 @@
     "          dlist_fasta=dlist_fasta,\n",
     "          output_dlist_fasta=dlist_fasta_vk_filter,\n",
     "          output_wt_mcrs_fa=wt_mcrs_fa_vk_filter,\n",
-    "          create_t2g=True,\n",
     "          output_t2g=t2g_vk_filter,\n",
     "          output_t2g_wt=t2g_wt_vk_filter,\n",
     "          id_to_header_csv=id_to_header_csv,\n",
