DEC17 COMPLEX SIM DATA WORKING

--- a/notebooks/1_1_variant_detection_reference_building.ipynb
+++ b/notebooks/1_1_variant_detection_reference_building.ipynb
@@ -37,7 +37,7 @@
     "k_standard = 31\n",
     "threads = 8\n",
     "remove_Ns = True\n",
-    "strandedness = False  # strandedness for gget mutate and the building of the kb index (True = strandedness matters i.e., treat f and rc as 2 different sequences; False = strandedness does not matter i.e., treat f and rc as the same \n",
+    "vcrs_strandedness = False  # strandedness for gget mutate and the building of the kb index (True = strandedness matters i.e., treat f and rc as 2 different sequences; False = strandedness does not matter i.e., treat f and rc as the same \n",
     "\n",
     "# vk build\n",
     "cosmic_version = 100  # COSMIC version for gget cosmic\n",
@@ -169,7 +169,7 @@
     "    min_seq_len=min_seq_len,\n",
     "    max_ambiguous=max_ambiguous_vk,\n",
     "    merge_identical=True,\n",
-    "    strandedness=strandedness,\n",
+    "    vcrs_strandedness=vcrs_strandedness,\n",
     "    cosmic_email = os.getenv('COSMIC_EMAIL'),\n",
     "    cosmic_password = os.getenv('COSMIC_PASSWORD'),\n",
     "    save_wt_mcrs_fasta_and_t2g=False,\n",
@@ -213,7 +213,7 @@
     "    ref_prefix=\"index\",\n",
     "    w=w,\n",
     "    remove_Ns=remove_Ns,\n",
-    "    strandedness=strandedness,\n",
+    "    strandedness=vcrs_strandedness,\n",
     "    bowtie_path=bowtie_path,\n",
     "    near_splice_junction_threshold=near_splice_junction_threshold,\n",
     "    threads=threads,\n",
